# ChangeLog for app-text/cherrytree
# Copyright 2011-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

* cherrytree-0.29.4.ebuild (02 Apr 2013)
* cherrytree-0.28.5.ebuild (02 Apr 2013)

  02 Apr 2013; Dmitry 'daks' Fomenko <daks12@gmail.com>;
  +cherrytree-0.29.4.ebuild, cherrytree-0.28.5.ebuild,
  +metadata.xml, +Changelog:
  Initial import, from bug #396543.