@@ -1,7 +1,9 @@
 DIST cherrytree-0.28.5.tar.xz 622684 SHA256 0d15626fe877d3f02114ce98f13f41fa16a8520525dc0fa37edef9144d89f391 SHA512 4ad9c5b43296b86cfe7fc66dd2cd8ae5ab7f914e3908e89082ecee9dcdb24aed61b37a148e50a4a4fbe2b64e0fa3137ce44f6bedcbf11a98b9110ba01ffece13 WHIRLPOOL ec482602d067874908ae5581e90e367cbee7348ac43078cec1aab37d6914b6324e429d1bd077ca3c5827d277c2ca5855f7232eb50766d76428258db62728ac13
 DIST cherrytree-0.29.4.tar.xz 706560 SHA256 464ed343bf210930724f40feec88d370789d048ed90ad8a76b8eee397aaca0eb SHA512 3c93f1c3046131f3e7c6736b16e95e2c54df33efe36f6a2d18d29898020c8ad93af8b6e1381d93aca3989baa1c6db1fbfbbeeba3f78656f1985edc55a84efd98 WHIRLPOOL ed91b630eefe2f9032fbcfbe61cdd57c4b290d23bd54b2fe9cd62eb94281d0602f98e50c5ac884eed46bbb64bdb8887857ff6bffeeaa4d6aa124efcbcd34cadb
+DIST cherrytree-0.30.5.tar.xz 5552396 SHA256 7af69e4cf6d88eb4b7d4703e03a782930741e4d49d5297fc970cf011fc743330 SHA512 99a1ad809b952c908ba0a852360d086a8a2a075f1816c887f82588a26292fedc7b1f3719300ddb6c7b0713769051c8a77251538eb8b9282ee9a79e49852c0236 WHIRLPOOL 1fffacc38fad132d9bd971c22a690d66a222915d84cf0141eecd3ad8d0328e416597a4f41045e2b4059ae7849299c68fe9c4a70363b5213fed81f5e3206db271
 EBUILD cherrytree-0.28.5.ebuild 952 SHA256 91628f945d1f0b2158658b4bc65f2f5fd912d69e5b98923a16fa99e99bad59f9 SHA512 7aa87785931c5a3ae7621d606a807f49df6336657665349cbea1649114a4242e6f25c56d787b1de35a0a558ef15013f4b427e01dee750c782882aa50a591ba7d WHIRLPOOL 6df21314d4b6fb3dddb60e4d458db908a8b43b94bbe08105340076f9e5cd577462e551f8476e377e8cd324ba64c8b53dbeaf14c55aab8dc36bda4e895fc35486
 EBUILD cherrytree-0.29.4-r1.ebuild 970 SHA256 a4bd0af0b7b6e03d244e05946808aa5b53e8647e9142e92b497f2b52214f8fb8 SHA512 789e7dfc48d80bfee84b7548197270cfa5d4618e62985e8ddd5ad97d77c6aad68d5d11e7144d25648aa2f4a23a36fe76d1b966fc39a1f85e2baaba76a0cd1bde WHIRLPOOL 7dffb2b9ac07a7643e08e69e2bf3c53b54f058b4e5ea42b382459a0aec9769f9ffdf203035623fcce9b20295a9a95f855afda14cf5f2d51b53255af44ea06a31
 EBUILD cherrytree-0.29.4.ebuild 952 SHA256 91628f945d1f0b2158658b4bc65f2f5fd912d69e5b98923a16fa99e99bad59f9 SHA512 7aa87785931c5a3ae7621d606a807f49df6336657665349cbea1649114a4242e6f25c56d787b1de35a0a558ef15013f4b427e01dee750c782882aa50a591ba7d WHIRLPOOL 6df21314d4b6fb3dddb60e4d458db908a8b43b94bbe08105340076f9e5cd577462e551f8476e377e8cd324ba64c8b53dbeaf14c55aab8dc36bda4e895fc35486
+EBUILD cherrytree-0.30.5.ebuild 1014 SHA256 8acd7fad2b1a3fef8e13ee1f79d37ecc9a192299c12311e56ad405ca429a1c5a SHA512 9e625fa448ec626c59c58d0eacdff7e7df70a91c91e39bcb1d8c1bb5c26f68139870f069f708f04f7f559715715760f71688a9d09d3432e893d1d38221371995 WHIRLPOOL 0c76471a974292bfe490d54e51d8870d047c2b124e468974d1a664bff691f8acf0794bec9ed71d488e6878dfbf5ff4c0e3d4e0d10df0613f2f3160de7e766ba5
 MISC ChangeLog 380 SHA256 1a71ec5cfd674d5293df2fe90cf729e64e3637aac5537a09e113916da314699b SHA512 7190b4721e9a68c1dc67d90b134442bd5a06ab42b8873e814bbf9222eeac1a9392af869443ba02ed10df905b2044520e925474b22ed8051fb75640f582a3cacd WHIRLPOOL 22e9426e3cd635cc27389f81f2ce41b9c0610cee940aafb1ec87c3c68343b961f1a85b11bb53d270ea93aa2b69de7aa1d02d5fa555593f4e19c8c4703c380587
 MISC metadata.xml 239 SHA256 46132d153ef5ee1075082ff571718736b90a2a48f85d29c7e38e07ba81322e42 SHA512 6355a32d108ed321ca77474192a5e83a05e173299dd34c95fe79b4bf464bb3d92b788ae4a03ee6a5235b17b22cffda0f1d557058a011c6d0b5eaf6ad54b7bbb5 WHIRLPOOL 07155d7fadf9c83395761153866d53dac1133efbb0e99057070bb83d612b5b385739bd39a5b0db363f28238f349fd8702f3b53db330ab588e846b47c52567f83
