@@ -1,6 +1,12 @@
 # ChangeLog for app-text/cherrytree
-# Copyright 2011-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*cherrytree-0.30.5 (02 Dec 2013)
+
+  02 Dec 2013; Блохин Юрий <jb@calculate.ru>
+  +cherrytree-0.30.5.ebuild:
+  Добавлена новая версия app-text/cherrytree
 
 * cherrytree-0.29.4.ebuild (02 Apr 2013)
 * cherrytree-0.28.5.ebuild (02 Apr 2013)
